<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="General">
        <ListPreference
            android:defaultValue="@string/preference_gender_default"
            android:entries="@array/gender"
            android:entryValues="@array/gender_short"
            android:key="@string/preference_gender_key"
            android:summary="%s"
            android:title="@string/preference_gender_title" />

        <at.fhooe.mos.mountaineer.ui.IntEditTextPreference
            android:defaultValue="@string/preference_age_default"
            android:key="@string/preference_age_key"
            android:title="@string/preference_age_title"
            android:inputType="number"/>

        <at.fhooe.mos.mountaineer.ui.IntEditTextPreference
            android:defaultValue="@string/preference_height_default"
            android:key="@string/preference_height_key"
            android:title="@string/preference_height_title"
            android:inputType="number"/>

        <at.fhooe.mos.mountaineer.ui.IntEditTextPreference
            android:defaultValue="@string/preference_mass_default"
            android:key="@string/preference_mass_key"
            android:title="@string/preference_mass_title"
            android:inputType="number"/>

        <at.fhooe.mos.mountaineer.ui.IntEditTextPreference
            android:defaultValue="@string/preference_par_default"
            android:key="@string/preference_par_key"
            android:title="@string/preference_par_title"
            android:inputType="number"/>

        <at.fhooe.mos.mountaineer.ui.IntEditTextPreference
            android:defaultValue="@string/preference_stridelength_default"
            android:key="@string/preference_stridelength_key"
            android:title="@string/preference_stridelength_title"
            android:inputType="number"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="Heart Rate Monitoring">
        <at.fhooe.mos.mountaineer.ui.IntEditTextPreference
            android:defaultValue="@string/preference_restinghr_default"
            android:key="@string/preference_restinghr_key"
            android:title="@string/preference_restinghr_title"
            android:inputType="number"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="Simulation">
        <CheckBoxPreference
            android:defaultValue="@string/preference_simulate_default"
            android:key="@string/preference_simulate_key"
            android:title="@string/preference_simulate_title" />
    </PreferenceCategory>
</PreferenceScreen>